--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid" src="img/course-1.jpg" alt="" style="height: ; width:max-content ;">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="#" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3 border-end" style="border-radius: 30px 0 0 30px;">Details</a>
+                                <a href="programmes.html" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3 border-end" style="border-radius: 30px 0 0 30px;">Details</a>
 
                             </div>
                         </div>
@@ -493,7 +493,7 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid" src="img/phd.jpg" alt="" style="height: 225px;">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="#" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3 border-end" style="border-radius: 30px 0 0 30px;">Details</a>
+                                <a href="programmes.html" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3 border-end" style="border-radius: 30px 0 0 30px;">Details</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -511,7 +511,7 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid" src="img/Graduate_06.20_Blog_Image_Resize.jpg" alt="" style="height: 225px;">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="#" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3" style="border-radius: 0 30px 30px 0;">Details</a>
+                                <a href="programmes.html" class="flex-shrink-0 btn btn-sm w3-win8-emerald px-3" style="border-radius: 0 30px 30px 0;">Details</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -520,7 +520,7 @@
                             <h5 class="mb-4">PGD Programme</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-book  me-2" style="color: green;"></i>Courses 1</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-book  me-2" style="color: green;"></i>Courses 2</small>
                             
                         </div>
                     </div>
