--- a/contact.html
+++ b/contact.html
@@ -284,7 +284,7 @@ font-style: normal;
                         </div>
                         <div class="ms-3">
                             <h5 class=" " style="color:black  ;">Office</h5>
-                            <p class="mb-0 nunito" style="font-size:17px">123 Street, New York, USA</p>
+                            <p class="mb-0 nunito" style="font-size:17px">FCT, Abuja Nigeria</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-3">
@@ -293,7 +293,7 @@ font-style: normal;
                         </div>
                         <div class="ms-3">
                             <h5 class=" " style="color:black  ;">Mobile</h5>
-                            <p class="mb-0 nunito" style="font-size:17px">+012 345 67890</p>
+                            <p class="mb-0 nunito" style="font-size:17px">+234 567 890</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
@@ -302,7 +302,7 @@ font-style: normal;
                         </div>
                         <div class="ms-3">
                             <h5 class=" " style="color: black ;">Email</h5>
-                            <p class="mb-0 nunito" style="font-size:17px">info@example.com</p>
+                            <p class="mb-0 nunito" style="font-size:17px">info@pasphtm.org</p>
                         </div>
                     </div>
                 </div>
